<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.brianmaher84.cbtlog.list.CreateOrEditActivity"
    tools:showIn="@layout/activity_create_or_edit">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/editSitution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editFeelings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editSitution"
            android:layout_below="@+id/editSitution"
            android:ems="10"
            android:inputType="text" />

        <EditText
            android:id="@+id/editThoughts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editFeelings"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textSituation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editSitution"
            android:layout_toRightOf="@+id/editSitution"
            android:layout_alignParentLeft="true"
            android:text="@string/situation" />

        <TextView
            android:id="@+id/textFeelings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editFeelings"
            android:layout_toRightOf="@+id/editFeelings"
            android:layout_alignParentLeft="true"
            android:text="@string/feelings" />

        <TextView
            android:id="@+id/textThoughts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editThoughts"
            android:layout_toRightOf="@+id/editThoughts"
            android:layout_alignParentLeft="true"
            android:text="@string/thoughts" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:onClick="run"
            android:text="@string/save" />


            <Button
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/delete" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
